Fix for text overflow in footer

--- a/frontend/src/app/components/footer/footer.component.scss
+++ b/frontend/src/app/components/footer/footer.component.scss
@@ -11,6 +11,7 @@
 .sub-text {
   display: block;
   font-weight: bold;
+  white-space: nowrap;
 }
 
 .footer > div {
